# masters_thesis

./: .aliases  .gitignore  .nojekyll  .pre-commit-config.yaml  03-02-01-05-ui-ux.html  04-00-reinforcement-learning.html  05-03-reward-function.html  CLAUDE.md  README.md  download_stock_data.py  editR.R  fetch_stocks_simple.py  fix_79.py  fix_td3_evaluate.py  gendata  index.html  main.py  masters-thesis-proposal.html  masters-thesis.docx  masters-thesis.html  masters_thesis.blg  masters_thesis.tex  masters_thesis_proposal.Rmd  masters_thesis_proposal.html  pcli  prepare_data.md  pyproject.toml  pytest.ini  requirements.txt  robots.txt  run.R  search.json  sitemap.xml  swap.RData  test.R  test.docx  test_lob_features.py  test_ppo_sync.py  test_trace_decorator.py  tmp_fix_ppo.py  (+5 more)
.claude/: settings.json
.claude/commands/: docs-writer.md  logger-check.md
.claude/plans/: strategy-evaluator-refactor.md
.githooks/: post-commit  pre-push
.github/workflows/: publish.yml
Rmd/: masters_thesis.Rmd  masters_thesis.Rnw  masters_thesis.tex
Rmd/cache/: __globals  __objects  __packages  biber_c7ab124106e85e731ecf56e19a84b72e.RData
Rmd/chapters/: Abstract.Rmd
Rnw/chapters/: Abstract.Rnw
cache/: __packages  _share2_6971f9e65e08a8f1309304dfbb32e113.RData  market_share2_bf7c1f1b23461552af9e9e7e77fa2273.RData  market_share2_bf7c1f1b23461552af9e9e7e77fa2273.rdb  market_share2_bf7c1f1b23461552af9e9e7e77fa2273.rdx  market_share_6bf5ad447385ca62f3d14bc083506b32.RData
data/: eurusd.RDS
data/1min/: AUDCHF.csv  AUDNZD.csv  CADJPY.csv  (+22 more)
docs/: FEATURE_ENGINEERING_GUIDE.md  FEATURE_QUICK_REFERENCE.md  big_picture.md  comparison.md  data_guide.md  ddpg_data_flow.md  ddpg_implementation_overview.md  experiment_workflow.md  feature_pipeline.md  feature_selection_in_drl.md  hft_features.md  overview.md  ppo_implementation_overview.md  ppo_overview.md  prepare_data.md  research.md  td3_implementation_overview.md  training_pipeline.md  workflow.d2
examples/: demo_one_file_per_symbol.py  download_raw_orderbook.py  dsr_with_gym_anytrading.py  enhanced_feature_selection_demo.py  feature_engineering_demo.py  fetch_stock_data.py  filter_lob_data.py
latex/: pracamgrwne.cls
memory/: MEMORY.md
notebooks/: masters_thesis.html  masters_thesis.qmd  masters_thesis_proposal.qmd
rnw old/: masters_thesis-concordance.tex  masters_thesis.Rnw  masters_thesis.bcf  masters_thesis.blg  masters_thesis.run.xml  masters_thesis.tex  masters_thesis.toc
rpm/: source_files.R
scripts/: FETCH_STOCKS_README.md  check_yaml_data_consistency.py  debug_td3_learning.py  download_stocks_from_gdrive.py  download_thesis_stock_data.py  export_thesis_results.py  fetch_crypto.py  fetch_stocks.py  filter_us_hours.py  generate_transformed_features_table.py  migrate_scenario_configs.py  minimal_example_torchrl.py  minimal_trading_test.py  publish_thesis.sh  quick_tradingenv_test.sh  run_all_scenarios.sh  run_random_experiments.sh  split_parquet_by_day.py  test2.py  torchrl_trading_example.py  tradingenv_wrapper_example.py  train_trading_agent.py  validate_all_raw_lob.py  validate_per_symbol.py  validate_prepared_data.py  validate_raw_lob_data.py
src/: cli.py  data_generator.py  masters_thesis.Rmd  masters_thesis.html  masters_thesis.tex  order_book.py  pracamgrwne.cls  run.R  run_non_coint.R
tests/: __init__.py  conftest.py  test_action_probabilities_plot.py  test_actual_returns_benchmarks.py  test_algorithms_backends.py  test_build_metric_report_edge_cases.py  test_column_value_feature.py  test_compare_rollouts.py  test_continuous_ppo.py  test_differential_sharpe.py  test_dsr_formula_exact.py  test_dsr_wrapper.py  test_dsr_yaml_integration.py  test_enhanced_feature_selector.py  test_env_builder.py  test_evaluation_metrics.py  test_evaluation_returns.py  test_feature_pipeline.py  test_feature_research_ic_scoring.py  test_generated_data_experiments_smoke.py  test_gymnasium_wrapper.py  test_hft_close_derivation.py  test_learning_health_smoke.py  test_lob_feature_docs.py  test_lob_features.py  test_manual_training_repro.py  test_pipeline_smoke.py  test_prepare_data_splits.py  test_price_column_config_compat.py  test_running_scalers.py  test_session_aware_normalization.py  test_statistical_benchmark_extensions.py  test_stock_data_fetcher.py  test_strategy_evaluator.py  test_streaming_env.py  test_streaming_evaluation.py
(+744 files in other folders)
