[project]
name = "masters-thesis"
version = "0.1.0"
description = "Master's thesis on trading strategies using reinforcement learning with TorchRL"
readme = "README.md"
requires-python = ">=3.12,<3.14"
authors = [
    {name = "Krzysztof Wojdalski"},
]
keywords = ["reinforcement-learning", "trading", "torchrl", "deep-learning", "finance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]


dependencies = [
    # Core scientific computing
    "pandas>=2.2.1",

    # Deep learning and RL
    "torch>=2.8.0",
    "torchrl>=0.7.0",
    "tensordict>=0.5.0",
    "gymnasium>=0.29.1",

    # Trading environment
    "gym-trading-env>=0.0.0",

    # Visualization
    "plotnine>=0.13.0",

    # Machine learning
    # Development tools
    "black>=24.3.0",
    "ruff>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-markdown-docs>=0.5.0",
    "pytest-codeblocks>=0.17.0",
    "mktestdocs>=0.2.5",
    "ipython>=8.12.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

analysis = [
    "ta>=0.11.0",  # Technical analysis library
    "yfinance>=0.2.0",  # Yahoo Finance data
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-autodoc-typehints>=2.0.0",
]

#all = [
#    "masters-thesis[dev,analysis,docs]",
#]

[project.scripts]
train-agent = "scripts.train_trading_agent:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*", "src*", "logger*"]
namespaces = true

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "untitled.*",
    ".git",
    ".venv",
    ".ruff_cache",
    "__pycache__",
    "build",
    "dist",
    "notebooks/"
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "S",    # bandit security checks
    "B",    # bugbear
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez (timezone awareness)
    "T20",  # flake8-print (no print statements)
    "RUF",  # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "S101",  # assert statements (needed for tests)
    "B018",  # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "T20"]  # Allow asserts and prints in tests
"scripts/*" = ["T20"]  # Allow prints in scripts

[tool.ruff.lint.isort]
known-first-party = ["src", "cli", "common"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.poetry]
package-mode = false
